# project-nod

./: .gitattributes  .gitignore  .releaserc.cjs  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_PARTNERS.md  Dockerfile.verification-replay  README.md  SECURITY.md  commitlint.config.cjs  compose.verification-replay.yml  docker-compose.commercial-e2e.yml  lh-pricing.json  llms.txt  package-lock.json  package.json  playwright.commercial.config.ts  playwright.website-holistic.config.ts  vitest.config.ts
python/: Dockerfile  FRAMEWORK_LOCK.md  KERNEL_PORT_MAP.md  README.md  pyproject.toml
python/scripts/: timed_first_verify.py
python/src/agentskeptic/: __init__.py  _models.py  _session.py  agentskeptic_error_codes.json  exceptions.py  verify.py
python/src/agentskeptic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/agentskeptic/_integrations/: __init__.py  autogen.py  crewai.py
python/src/agentskeptic/kernel/: __init__.py  aggregate.py  event_sequence.py  execution_path_findings.py  no_steps.py  outcome_certificate.py  plan_logical.py  reconciler_postgres.py  reconciler_sqlite.py  reconciliation_presentation.py  resolve_expectation.py  support_core.py  user_phrases.py  value_verification.py  verification_diagnostics.py  verification_run_context.py  verify_postgres.py  verify_sqlite.py  workflow_truth_report.py
python/src/agentskeptic/tools/: __init__.py  emit_registry.py
python/src/agentskeptic_conformance/: run.py
python/tests/: test_crewai_minimal_example.py  test_emit_registry.py  test_framework_lock_imports.py  test_parity_goldens.py  test_public_api.py
python/tests/parity_vectors/: manifest.json
python/tests/parity_vectors/langgraph_a2_malformed/: golden_certificate.json
python/tests/parity_vectors/langgraph_lct_a2/: golden_certificate.json
(+1464 files in other folders)
