[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentskeptic"
version = "1.1.2"
description = "Python-native database-truth verification for CrewAI and LangGraph (AgentSkeptic kernel)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "jsonschema>=4.22",
  "httpx>=0.27",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
postgres = ["psycopg[binary]>=3.2"]
crewai = ["crewai>=0.80"]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
migrate = ["libcst>=1.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "parity_oracle: requires Node dist/cli.js to refresh goldens",
  "integration: optional framework deps",
]
